# reef-connect

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  ruff.toml
backend/: .env.example  .env.monolith.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/api_service/: .env.example  requirements.txt
backend/api_service/app/: app.py
backend/api_service/app/api/: auth_api.py  certification_api.py  dive_log_api.py  media_api.py  scubadex_api.py  species_api.py  user_api.py
backend/api_service/app/core/: config.py  security.py
backend/api_service/app/schemas/: dive_log_schemas.py  media_schemas.py  scubadex_schemas.py  species_schemas.py  user_schemas.py
backend/api_service/app/services/: auth_service.py  dive_log_service.py  media_service.py  scubadex_service.py  species_service.py  user_certification_service.py  user_service.py
backend/api_service/tests/: conftest.py
backend/api_service/tests/integration/: test_auth_api.py  test_certification_api.py  (+5 more)
backend/common/: config.py
backend/common/container/: __init__.py
backend/common/db/: __init__.py  database.py  db_types.py  test_db_setup.py
backend/common/tests/: conftest.py  fixtures.py
backend/common/types/: __init__.py  enums.py
backend/materialized_data_worker/: .env.example
backend/media_worker/: .env.example
backend/media_worker/app/: __init__.py  media_processor.py  media_worker.py  media_worker_container_controller.py  media_worker_event_service.py
backend/media_worker/tests/: test_media_worker.py
backend/ml_tagger_worker/: .env.example
(+102 files in other folders)
