[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reefconnect-backend"
version = "0.1.0"
description = "ReefConnect Backend Services"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "api_service*"]

[tool.pytest.ini_options]
testpaths = ["api_service/tests", "common/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
extend = "../ruff.toml"
